--- a/contactus.html
+++ b/contactus.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Contact Us here</h1>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
 </body>
 </html>
